--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body{
 	font-family: 'Noto Sans TC', sans-serif;
+	background: #ff6d00;
+	overflow-x: hidden;
 }
 
 * {
@@ -10,9 +12,49 @@ body{
 
 #map{
 	position: fixed;
-	top: 0;
+	top: 4.2rem;;
 	left: 0;
 	width: 100vw;
-	height: 100vh;
+	height: calc(100vh - 4.2rem);
 }
 
+header{
+	position: fixed;
+	width: 100vw;
+	padding: .3rem 2rem;
+	top: 0;
+	z-index: 99;
+	background: #ff6d00;
+	box-shadow: 0 2px 15px 3px #ff4500;
+}
+
+.content{
+	background: url('../pic/bg.jpg');
+	background-size: 100%;
+}
+
+section{
+	height: 100vh;
+	padding-top: 5rem;
+	text-align: center;
+}
+
+section .container{
+	max-width: 700px;
+	margin: 10vh auto;
+	background: rgba(200, 200, 200, 0.2);
+	padding: 2rem;
+}
+
+section .bottom{
+	bottom: 5vh;
+	text-align: center;
+	width: 100vw;
+	font-size: 2rem;
+}
+
+section p{
+	font-size: 1.4rem;
+	letter-spacing: 1px;
+	line-height: 2rem;
+}
